--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "elasticsearch": "^14.0.0",
-    "nodegit": "^0.20.3"
+    "nodegit": "^0.20.3",
+    "rxjs": "^5.5.6"
   }
 }
